--- a/Homeworks/06_LINQ/Task08/Task08.csproj
+++ b/Homeworks/06_LINQ/Task08/Task08.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Task01\Task01.csproj">
+      <Project>{C290E2BC-6FA3-49C7-A998-24AC015EFA99}</Project>
+      <Name>Task01</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
