--- a/Homeworks/06_ADO.NET/Task04.A/04. Using Raw SQL.csproj
+++ b/Homeworks/06_ADO.NET/Task04.A/04. Using Raw SQL.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5CF483CB-4D3B-4DE7-B0DC-360C649932CB}</ProjectGuid>
+    <ProjectGuid>{2F29F2A9-CF4A-41FD-8A09-7AB0FAD3DFEC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Task06</RootNamespace>
-    <AssemblyName>Task06</AssemblyName>
+    <RootNamespace>Task04.A</RootNamespace>
+    <AssemblyName>Task04.A</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -36,6 +36,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Task01\01. ObjectContext.csproj">
+      <Project>{1414AB49-2F0E-4219-BC2C-41416F493A5A}</Project>
+      <Name>01. ObjectContext</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
