--- a/Project/WebCalendar/WebCalendar/Web.config
+++ b/Project/WebCalendar/WebCalendar/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-  <add name="WebCalendarEntities" connectionString="metadata=res://*/WebCalendar.csdl|res://*/WebCalendar.ssdl|res://*/WebCalendar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=WebCalendar;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="WebCalendarEntities" connectionString="metadata=res://*/WebCalendar.csdl|res://*/WebCalendar.ssdl|res://*/WebCalendar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=WebCalendar;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="PreserveLoginUrl" value="true" />
@@ -21,7 +22,7 @@
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
-    <authentication mode="Forms">
+    <authentication mode="Windows">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
     <pages>
@@ -34,8 +35,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
-    </profile>
+    <profile defaultProvider="DefaultProfileProvider"></profile>
     <membership defaultProvider="DefaultMembershipProvider">
       <providers>
         <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="WebCalendarEntities" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
