--- a/Project/WebCalendar/WebCalendar/Web.config
+++ b/Project/WebCalendar/WebCalendar/Web.config
@@ -43,9 +43,20 @@
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="WebCalendarEntities" applicationName="/" />
       </providers>
     </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
+    <membership defaultProvider="CustomMembershipProvider">
       <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="WebCalendarEntities" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <clear/>
+        <add name="CustomMembershipProvider" type="MyMembershipProvider"
+             connectionStringName="ApplicationServices"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="false"
+             maxInvalidPasswordAttempts="5"
+             minRequiredPasswordLength="3"
+             minRequiredNonalphanumericCharacters="0"
+             passwordAttemptWindow="10"
+             applicationName="/" />
       </providers>
     </membership>
     <roleManager defaultProvider="DefaultRoleProvider">
