--- a/Project/WebCalendar/WebCalendar/Web.config
+++ b/Project/WebCalendar/WebCalendar/Web.config
@@ -4,8 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-
-
   <connectionStrings>
     <add name="WebCalendarEntities" connectionString="metadata=res://*/WebCalendar.csdl|res://*/WebCalendar.ssdl|res://*/WebCalendar.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=WebCalendar;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -27,7 +25,6 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -45,18 +42,8 @@
     </profile>
     <membership defaultProvider="CustomMembershipProvider">
       <providers>
-        <clear/>
-        <add name="CustomMembershipProvider" type="MyMembershipProvider"
-             connectionStringName="ApplicationServices"
-             enablePasswordRetrieval="false"
-             enablePasswordReset="true"
-             requiresQuestionAndAnswer="false"
-             requiresUniqueEmail="false"
-             maxInvalidPasswordAttempts="5"
-             minRequiredPasswordLength="3"
-             minRequiredNonalphanumericCharacters="0"
-             passwordAttemptWindow="10"
-             applicationName="/" />
+        <clear />
+        <add name="CustomMembershipProvider" type="MyMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="3" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
     <roleManager defaultProvider="DefaultRoleProvider">
