--- a/Project/WebCalendar/WebCalendar/WebCalendar.csproj
+++ b/Project/WebCalendar/WebCalendar/WebCalendar.csproj
@@ -99,16 +99,18 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MeetingController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\CategoryData.cs" />
+    <Compile Include="Models\ContactData.cs" />
     <Compile Include="Models\DAO.cs" />
     <Compile Include="App_Data\MyMembershipProvider.cs" />
-    <Compile Include="Models\UserRepository.cs" />
+    <Compile Include="Models\MeetingData.cs" />
+    <Compile Include="Models\UserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebCalendar.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -209,7 +211,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\Home\Wellcome.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
