--- a/Project/WebCalendar/WebCalendar.UserTestData/WebCalendar.UserTestData.csproj
+++ b/Project/WebCalendar/WebCalendar.UserTestData/WebCalendar.UserTestData.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GenerateUserData.cs" />
+    <Compile Include="GenerateTestData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
