--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Web.config
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet.mdf;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="HomeworkSubmissionEntities" connectionString="metadata=res://*/HomeworkSubmission.csdl|res://*/HomeworkSubmission.ssdl|res://*/HomeworkSubmission.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=HomeworkSubmission;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
