--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/HomeworkSubmission.MVC.csproj
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/HomeworkSubmission.MVC.csproj
@@ -99,7 +99,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\CourseViewModel.cs" />
     <Compile Include="Models\StudentViewModel.cs" />
+    <Compile Include="Models\TopicViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
