--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/HomeworkSubmission.MVC.csproj
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/HomeworkSubmission.MVC.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SubmissionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -199,6 +200,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.Config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Views\Submission\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
