--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/App.Config
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="HomeworkSubmissionEntities" connectionString="metadata=res://*/HomeworkSubmission.csdl|res://*/HomeworkSubmission.ssdl|res://*/HomeworkSubmission.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=HomeworkSubmission;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HomeworkSubmissionEntities" connectionString="metadata=res://*/HomeworkSubmission.csdl|res://*/HomeworkSubmission.ssdl|res://*/HomeworkSubmission.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=HomeworkSubmission;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
