--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.DAL/HomeworkSubmission.DAL.csproj
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.DAL/HomeworkSubmission.DAL.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,7 @@
     <Compile Include="DAO.cs" />
     <Compile Include="StudentDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="HomeworkSubmission.edmx">
