--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Web.config
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Web.config
@@ -25,6 +25,14 @@
   </appSettings>
 
   <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpHandlers>
       <add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
     </httpHandlers>
