--- a/HomeworkSubmission/HomeworkSubmission/HomeworkSubmission.MVC/packages.config
+++ b/HomeworkSubmission/HomeworkSubmission/HomeworkSubmission.MVC/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AspNetMvc" version="4.0.10906.0" />
+  <package id="AspNetMvc4.RecipeSdk" version="0.1" />
   <package id="AspNetWebPagesCore" version="2.0.10906.0" />
   <package id="EntityFramework" version="4.1.10331.0" />
   <package id="jQuery" version="1.6.2" />
